major upgrade to lamp preset
Signed-off-by: Vasiliy Tolstov <vase@clodo.ru>

--- a/cookbooks/mysql/templates/default/debian.cnf.erb
+++ b/cookbooks/mysql/templates/default/debian.cnf.erb
@@ -2,11 +2,10 @@
 host     = localhost
 user     = debian-sys-maint
 password = <%= node['mysql']['server_debian_password'] %>
-socket   = <%= node['mysql']['socket'] %>
+socket   = <%= node['mysql']['mysqld']['socket'] %>
 
 [mysql_upgrade]
 host     = localhost
 user     = debian-sys-maint
 password = <%= node['mysql']['server_debian_password'] %>
-socket   = <%= node['mysql']['socket'] %>
-basedir  = /usr
+socket   = <%= node['mysql']['mysqld']['socket'] %>
