add livegen mirrors
Signed-off-by: Vasiliy Tolstov <vase@clodo.ru>

--- a/cookbooks/nginx/templates/default/confs/mirror.conf.erb
+++ b/cookbooks/nginx/templates/default/confs/mirror.conf.erb
@@ -32,5 +32,11 @@ map $fetch $deny {
   archive.canonical.com 0;
   extras.ubuntu.com 0;
   nginx.org 0;
+  downloads.linux.hp.com 0;
+  apt.opscode.com 0;
+  ftp.debian.org 0;
+  ftp.fi.debian.org 0;
+  ftp.de.debian.org 0;
+  ftp.us.debian.org 0;
 }
 
