makes feed updatable in wordpress
Signed-off-by: Vasiliy Tolstov <v.tolstov@selfip.ru>

--- a/cookbooks/wordpress/templates/default/wordpress-nginx.conf.erb
+++ b/cookbooks/wordpress/templates/default/wordpress-nginx.conf.erb
@@ -69,7 +69,7 @@ server {
     }
   }
 
-  location ~ ^/(wp-admin/.*\.php|wp-login\.php|wp-register\.php|(feed|comment/feed)(/.*)?)$ {
+  location ~ ^/(wp-admin/.*\.php|wp-login\.php|wp-register\.php)$ {
     try_files $uri @wordpress;
     set $do_not_cache 1;
     fastcgi_cache_bypass 1;
