foodcritic on wordpress
Signed-off-by: Vasiliy Tolstov <vase@clodo.ru>

--- a/cookbooks/wordpress/templates/default/wordpress-apache.conf.erb
+++ b/cookbooks/wordpress/templates/default/wordpress-apache.conf.erb
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-  ServerName <%= @params[:server_name] %>
-  ServerAlias <% @params[:server_aliases].each do |a| %><%= "#{a}" %> <% end %>
-  DocumentRoot <%= @params[:docroot] %>
+  ServerName <%= @params['server_name'] %>
+  ServerAlias <% @params['server_aliases'].each do |a| %><%= a %> <% end %>
+  DocumentRoot <%= @params['docroot'] %>
 
-  <Directory <%= @params[:docroot] %>>
+  <Directory <%= @params['docroot'] %>>
     Options FollowSymLinks
     AllowOverride All
     Order allow,deny
@@ -16,11 +16,11 @@
   </Directory>
 
   LogLevel info
-  ErrorLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-error.log
-  CustomLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-access.log combined
+  ErrorLog <%= @params['log_dir'] %>/<%= @params['name'] %>-error.log
+  CustomLog <%= @params['log_dir'] %>/<%= @params['name'] %>-access.log combined
 
   RewriteEngine On
-  RewriteLog <%= node['apache']['log_dir'] %>/<%= @application_name %>-rewrite.log
+  RewriteLog <%= @params['log_dir'] %>/<%= @application_name %>-rewrite.log
   RewriteLogLevel 0
 
 </VirtualHost>
