--- a/cookbooks/nginx/templates/default/nginx.conf.erb
+++ b/cookbooks/nginx/templates/default/nginx.conf.erb
@@ -31,8 +31,8 @@ http {
   <% if node['nginx']['gzip'] == "on" %>
   gzip_http_version <%= node['nginx']['gzip_http_version'] %>;
   gzip_comp_level <%= node['nginx']['gzip_comp_level'] %>;
-  gzip_proxied <%= node['nginx'][:gzip_proxied'] %>;
-  gzip_types <%= node['nginx'][:gzip_types'].join(' ') %>;
+  gzip_proxied <%= node['nginx']['gzip_proxied'] %>;
+  gzip_types <%= node['nginx']['gzip_types'].join(' ') %>;
   gzip_disable "MSIE [1-6]\.";
   <% end %>
 
