--- a/cookbooks/livestreet/templates/default/livestreet.conf.erb
+++ b/cookbooks/livestreet/templates/default/livestreet.conf.erb
@@ -1,9 +1,9 @@
 <VirtualHost *:80>
-  ServerName <%= @params[:server_name] %>
-  ServerAlias <% @params[:server_aliases].each do |a| %><%= "#{a}" %> <% end %>
-  DocumentRoot <%= @params[:docroot] %>
+  ServerName <%= @server_name %>
+  ServerAlias <% @server_aliases.each do |a| %><%= a %> <% end %>
+  DocumentRoot <%= @docroot %>
 
-  <Directory <%= @params[:docroot] %>>
+  <Directory <%= @docroot %>>
     Options FollowSymLinks
     AllowOverride All
     Order allow,deny
@@ -14,13 +14,5 @@
     Options FollowSymLinks
     AllowOverride None
   </Directory>
-
-  LogLevel info
-  ErrorLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-error.log
-  CustomLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-access.log combined
-
-  RewriteEngine On
-  RewriteLog <%= node['apache']['log_dir'] %>/<%= @application_name %>-rewrite.log
-  RewriteLogLevel 0
 
 </VirtualHost>
